--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="img/desktop.png" class="logo-desktop" alt="" srcset="">
         <nav class="nav">
             <a href="#">Start a Project</a>
-            <a href="#">Works</a>
-            <a href="#">About Us </a>
-            <a href="#">Contact</a>
+            <a href="#works">Works</a>
+            <a href="#about">About Us </a>
+            <a href="#contact">Contact</a>
         </nav>
         <div id="menu-bar" class="fa fa-bars"></div>
     </header>
@@ -35,7 +35,7 @@
             </div>
     </section>
     </div>
-    <section class="works">
+    <section class="works" id="works">
          <div class="col">
             <div class="col-bx">
                  <div class="img-bx">
@@ -96,7 +96,7 @@
             <a href="#"class="row-1-btn"> Start a project</a>
            </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-content">
             <div class="img-div">
                 <img src="img/Vector.png" alt="" srcset="">
@@ -165,7 +165,7 @@
         <h1>Impressed Yet?</h1>
         <a href=""class="lets-work">Let’s work on your next project.</a>
     </section>
-    <section class="footer">
+    <section class="footer" id="contact">
         <div class="footer-div">
             <div class="f1">
                 <a href="">Facebook</a>
