--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="img/desktop.png" class="logo-desktop" alt="" srcset="">
         <nav class="nav">
             <a href="#">Start a Project</a>
-            <a href="#works">Works</a>
+            <a href="#works">Portfolio</a>
             <a href="#about">About Us </a>
             <a href="#contact">Contact</a>
         </nav>
@@ -37,55 +37,68 @@
     </div>
     <section class="works" id="works">
          <div class="col">
+                <div class="col-bx">
+                    <a href="https://marvelous-parade-1de.notion.site/Alt-Foods-0bfbe45f5d554a0a84dd9b5af7bee964" target="_blank">
+                    <div class="img-bx">
+                       <img src="img/w1 (1).png" alt="" srcset="">
+                    </div>
+                </a>
+                    <div class="text-bx">
+                       <h1>Alt Foods</h1>
+                       <p>Brand Identity Design, Print</p>
+                    </div>
+               </div>
+
             <div class="col-bx">
-                 <div class="img-bx">
-                    <img src="img/w1 (1).png" alt="" srcset="">
-                 </div>
-                 <div class="text-bx">
-                    <h1>Alt Foods</h1>
-                    <p>Brand Identity Design, Print</p>
-                 </div>
-            </div>
-            <div class="col-bx">
+                <a href="https://marvelous-parade-1de.notion.site/Sanwo-io-3bb3d4c9754c48a0b2d5e2effdf56f21" target="_blank">
                  <div class="img-bx">
                     <img src="img/w1 (5).png" alt="" srcset="">
                  </div>
+                </a>
                  <div class="text-bx">
                     <h1>Sanwo.io</h1>
                     <p>Brand Identity Design, Digital Product Design, Merchandise</p>
                  </div>
             </div>
             <div class="col-bx">
+                <a href="https://www.notion.so/Cano-Foods-fa738715bf984e2e970ff894998f6343" target="_blank">
                  <div class="img-bx">
                     <img src="img/w1 (6).png" alt="" srcset="">
                  </div>
+                 </a>
                  <div class="text-bx">
                     <h1>Cano Foods</h1>
                     <p>Brand Identity Design</p>
                  </div>
             </div>
             <div class="col-bx">
+                <a href="https://www.notion.so/LWS-Events-dc6ecf7ef59b4cbba23ad322224a5434" target="_blank">
                  <div class="img-bx">
                     <img src="img/w1 (3).png" alt="" srcset="">
                  </div>
+                 </a>
                  <div class="text-bx">
                     <h1>LWS Events</h1>
                     <p>Brand Identity Design, Merchandise, Print</p>
                  </div>
             </div>
             <div class="col-bx">
+                <a href="https://www.notion.so/SkillNG-120ad00f9a4e45198e4b596b2e771423" target="_blank">
                  <div class="img-bx">
                     <img src="img/w1 (2).png" alt="" srcset="">
                  </div>
+                </a>
                  <div class="text-bx">
                     <h1>SkillNG</h1>
                     <p>Brand Identity Design, Iconography, Merchandise, Print</p>
                  </div>
             </div>
             <div class="col-bx">
+                <a href="https://www.notion.so/Lagos-Covid-19-Food-Relief-8401c6aed394491ba95aac2ab0acc3d4" target="_blank">
                  <div class="img-bx">
                     <img src="img/Mask group (1).png" alt="" srcset="">
                  </div>
+                 </a>
                  <div class="text-bx">
                     <h1>Lagos Covid-19 Food Relief</h1>
                     <p>Digital Marketing, Brand Strategy</p>
@@ -93,7 +106,8 @@
             </div>
          </div>
            <div class="works-btn">
-            <a href="#"class="row-1-btn"> Start a project</a>
+            <a href="https://marvelous-parade-1de.notion.site/HueNation-Works-07e2dd88e8e1479ba61c255c3184b64b"class="work-btn" target="_blank">See more works</a>
+            <a href=""class="work-btn two" target="_blank"> Start a project</a>
            </div>
     </section>
     <section class="about" id="about">
@@ -113,8 +127,8 @@
              <div class="text-2">
                 <h1>We would like to talk to you about your next branding project</h1>
                 <div class="media-links">
-                    <li>hello@huenation.com.ng</li>
-                     <li>+234802 922 1426</li>
+                     <li><a href="mailto:hello@huenation.com.ng">hello@huenation.com.ng</a></li>
+                     <li><a href="tel:+234802 922 1426">+234802 922 1426</a></li>
                      <a href="#" >Facebook </a>     
                      <a href="#" class="insta">Instagram </a>     
                 </div>
@@ -160,6 +174,33 @@
                  </div>
              </div>
           </div>
+    </section>
+    <section class="testimonial">
+        <div class="testi-row">
+             <div class="testi-text">
+                <h1>They love us, you will too</h1>
+                <p>We take pride in satisfying our clients and solving their problems.</p>
+             </div>
+             <div class="testi-bx">
+                <div class="testi-bx-container">
+                     <img src="img/quote.svg" alt="" srcset="">
+
+                     <p>We take pride in satisfying our clients and solving their problems.</p>
+                     <div class="testi-bx-txt">
+                        <h1>Malik Kolade</h1>
+                        <small>Co-Founder, Sanwo.io</small>
+                     </div>
+                </div>
+                <div class="testi-bx-container">
+                    <img src="img/quote.svg" alt="" srcset="">
+                    <p>We take pride in satisfying our clients and solving their problems.</p>
+                    <div class="testi-bx-txt">
+                        <h1>Malik Kolade</h1>
+                        <small>Co-Founder, Sanwo.io</small>
+                     </div>
+                </div>
+             </div>
+        </div>
     </section>
     <section class="demo">
         <h1>Impressed Yet?</h1>
