--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-bx">
                 <a href="https://marvelous-parade-1de.notion.site/Sanwo-io-3bb3d4c9754c48a0b2d5e2effdf56f21" target="_blank">
                  <div class="img-bx">
-                    <img src="img/w1 (5).png" alt="" srcset="">
+                    <img src="img/SANWO.png" alt="" srcset="">
                  </div>
                 </a>
                  <div class="text-bx">
