--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="testi-bx-container">
                      <img src="img/quote.svg" alt="" srcset="">
 
-                     <p>We take pride in satisfying our clients and solving their problems.</p>
+                     <p>Working with HueNation for our brand design was smooth and is definitely giving us the right returns for Sanwo.</p>
                      <div class="testi-bx-txt">
                         <h1>Malik Kolade</h1>
                         <small>Co-Founder, Sanwo.io</small>
@@ -193,10 +193,10 @@
                 </div>
                 <div class="testi-bx-container">
                     <img src="img/quote.svg" alt="" srcset="">
-                    <p>We take pride in satisfying our clients and solving their problems.</p>
+                    <p>I wanted LWS to be different but didn't know how to go about it, HueNation did more than enough in helping with the brand identity.</p>
                     <div class="testi-bx-txt">
-                        <h1>Malik Kolade</h1>
-                        <small>Co-Founder, Sanwo.io</small>
+                        <h1>Sandra Adebayo</h1>
+                        <small>Founder, LWS Events</small>
                      </div>
                 </div>
              </div>
