--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                 <div class="media-links">
                      <li><a href="mailto:hello@huenation.com.ng">hello@huenation.com.ng</a></li>
                      <li><a href="tel:+234802 922 1426">+234802 922 1426</a></li>
-                     <a href="#" >Facebook </a>     
-                     <a href="#" class="insta">Instagram </a>     
+                     <a href="https://www.facebook.com/huenationng"  target="_blank">Facebook </a>     
+                     <a href="https://www.instagram.com/huenationng/
+                     "   target="_blank" class="insta">Instagram </a>     
                 </div>
              </div>
         </div>
@@ -209,13 +210,13 @@
     <section class="footer" id="contact">
         <div class="footer-div">
             <div class="f1">
-                <a href="">Facebook</a>
-                <a href="">Instagram</a>
-                <a href="">LinkedIn</a>
+                <a href="https://www.facebook.com/huenationng" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/huenationng/"  target="_blank">Instagram</a>
+                <a href="https://www.linkedin.com/company/huenation-media"  target="_blank">LinkedIn</a>
             </div>
             <div class="f2">
-                <li>hello@huenation.com.ng</li>
-                <li>+234802 922 1426</li>
+                <li><a href="mailto:hello@huenation.com.ng">hello@huenation.com.ng</a></li>
+                <li><a href="tel:+234802 922 1426">+234802 922 1426</a></li>
                 <li>Lagos, Nigeria</li>
             </div>
         </div>
