--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hue Nation || Portfolio</title>
+    <title>HueNation</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/Frame 1.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dc287775fc.js" crossorigin="anonymous"></script>
 </head>
 
